tests/unit-fail-compilation/j084e.ref
j084e.c:2:1: error: Redefinition of symbol: f.
  Constraint violation (CV-TDG13). See C11 sec. 6.9:3
Translation failed (config dumped). Run kcc -d j084e.c to see commands run.
