tests/unit-fail-compilation/j084e.c
void f(void) { }
void f(void) { }

int main(void) {
      return 0;
}
